PLZ-510 Photo albums. Create table, relations, controller. Added store method and created request for store.
